const grpc = require("@grpc/grpc-js");
const protoLoader = require("@grpc/proto-loader");
const path = require("path");
const Opossum = require("opossum");

const PROTO_PATH = path.join(__dirname, "../protos/payment.proto");
// ÐÐ´Ñ€ÐµÑ payment-service Ð²Ð½ÑƒÑ‚Ñ€Ð¸ Docker ÑÐµÑ‚Ð¸
const PAYMENT_SERVICE_ADDR =
  process.env.PAYMENT_SERVICE_GRPC || "payment-service:50051";

const packageDefinition = protoLoader.loadSync(PROTO_PATH, {
  keepCase: true,
  longs: String,
  enums: String,
  defaults: true,
  oneofs: true,
});
const paymentProto = grpc.loadPackageDefinition(packageDefinition).payment;

const client = new paymentProto.PaymentService(
  PAYMENT_SERVICE_ADDR,
  grpc.credentials.createInsecure()
);

// Ð¤ÑƒÐ½ÐºÑ†Ð¸Ñ Ð¾Ð±ÐµÑ€Ñ‚ÐºÐ° Ð´Ð»Ñ Ð¿Ñ€Ð¾Ð¼Ð¸ÑÐ¸Ñ„Ð¸ÐºÐ°Ñ†Ð¸Ð¸ gRPC
function getStatusFromService(orderId) {
  return new Promise((resolve, reject) => {
    client.GetPaymentStatus({ orderId }, (error, response) => {
      if (error) return reject(error);
      resolve(response);
    });
  });
}

// --- Circuit Breaker Options ---
const breakerOptions = {
  timeout: 1000, // Ð•ÑÐ»Ð¸ Ð·Ð°Ð¿Ñ€Ð¾Ñ Ð´Ð»Ð¸Ñ‚ÑÑ Ð´Ð¾Ð»ÑŒÑˆÐµ 1 ÑÐµÐº -> ÑÑ‡Ð¸Ñ‚Ð°Ñ‚ÑŒ Ð¾ÑˆÐ¸Ð±ÐºÐ¾Ð¹
  errorThresholdPercentage: 50, // Ð•ÑÐ»Ð¸ 50% Ð·Ð°Ð¿Ñ€Ð¾ÑÐ¾Ð² Ð¿Ð°Ð´Ð°ÑŽÑ‚ -> Ð¾Ñ‚ÐºÑ€Ñ‹Ñ‚ÑŒ Ñ†ÐµÐ¿ÑŒ
  resetTimeout: 5000, // Ð§ÐµÑ€ÐµÐ· 5 ÑÐµÐº Ð¿Ð¾Ð¿Ñ€Ð¾Ð±Ð¾Ð²Ð°Ñ‚ÑŒ ÑÐ½Ð¾Ð²Ð° (Half-Open)
};

const breaker = new Opossum(getStatusFromService, breakerOptions);

// Ð›Ð¾Ð³Ð¸Ñ€Ð¾Ð²Ð°Ð½Ð¸Ðµ ÑÐ¾ÑÑ‚Ð¾ÑÐ½Ð¸Ð¹
breaker.on("open", () =>
  console.warn("ðŸ”´ Circuit Breaker is OPEN! (Requests blocked)")
);
breaker.on("halfOpen", () =>
  console.log("ðŸŸ¡ Circuit Breaker is HALF-OPEN (Testing downstream)")
);
breaker.on("close", () =>
  console.log("ðŸŸ¢ Circuit Breaker is CLOSED (Normal operation)")
);
breaker.on("fallback", () => console.log("âš ï¸ Serving Fallback response"));

// Fallback Ñ„ÑƒÐ½ÐºÑ†Ð¸Ñ (ÐµÑÐ»Ð¸ ÑÐµÑ€Ð²Ð¸Ñ Ð»ÐµÐ¶Ð¸Ñ‚)
breaker.fallback(() => {
  return {
    status: "unknown (service unavailable)",
    transactionId: "N/A",
    isFallback: true,
  };
});

module.exports = { breaker };
